# invariance

./: .gitignore  main.py  pyproject.toml
examples/: sensors.csv
invariance/: __init__.py  cli.py
invariance/calibration/: alpha.py
invariance/config/: load.py  sim.py
invariance/data/: sensors.py
invariance/synthetic/: generate.py
run_cal/: config.json  field.npy  field_calibrated.npy  history.npy  metadata.json  metrics.json  sensor_residuals.csv
run_synth/: config.json  field.npy  field_calibrated.npy  history.npy  metadata.json  metrics.json
synth_case/: README.txt  sensors.csv  truth.json
tests/: test_calibration_alpha.py  test_config_loading.py  test_sensor_pipeline.py  test_simulate_invalid_config.py  test_synthetic_roundtrip.py
